Kubernetes/jmaze-k8s-cilium/sbi/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sbi
  labels:
    app: postgres
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "db.sbi.local.julianmaze.com"
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: postgres
