Kubernetes/jmaze-k8s-cilium/sbi/postgres/tcp_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
  namespace: sbi
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "db.sbi.local.julianmaze.com"
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: sbi-postgres
  rules:
    - backendRefs:
        - name: postgres
          port: 5432
          kind: Service
